--- a/Middle Logo/css/queries.css
+++ b/Middle Logo/css/queries.css
@@ -1,31 +1,71 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600;800&display=swap");
 /* 
   ##Device = Desktops
   ##Screen = 1281px to higher resolution desktops
 */
-/* 
-    ##Device = Laptops, Desktops
-    ##Screen = B/w 1025px to 1280px
-  */
-/* 
-    ##Device = Tablets, Ipads (portrait)
-    ##Screen = B/w 768px to 1024px
-  */
-/* 
-    ##Device = Tablets, Ipads (landscape)
-    ##Screen = B/w 768px to 1024px
-  */
-/* 
-    ##Device = Low Resolution Tablets, Mobiles (Landscape)
-    ##Screen = B/w 481px to 767px
-  */
-@media (min-width: 481px) and (max-width: 767px) {
-  header li {
+@media (min-width: 1281px) {
+  .mobile-nav {
     display: none;
   }
 }
 
 /* 
-    ##Device = Most of the Smartphones Mobiles (Portrait)
-    ##Screen = B/w 320px to 479px
+    ##Device = Laptops, Desktops
+    ##Screen = B/w 1025px to 1280px
   */
+@media (min-width: 1025px) and (max-width: 1280px) {
+  .mobile-nav {
+    display: none;
+  }
+}
+
+/* 
+    ##Device = Tablets, Ipads (portrait)
+    ##Screen = B/w 768px to 1024px
+  */
+@media (min-width: 768px) and (max-width: 1024px) {
+  .mobile-nav {
+    display: none;
+  }
+}
+
+/* 
+    ##Device = Tablets, Ipads (landscape)
+    ##Screen = B/w 768px to 1024px
+  */
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  .mobile-nav {
+    display: none;
+  }
+}
+
+/* 
+    ##Device = Low Resolution Tablets, Mobiles (Landscape)
+    ##Screen = B/w 481px to 767px
+  */
+@media (min-width: 481px) and (max-width: 767px) {
+  header .list li {
+    display: none;
+  }
+  .mobile-nav {
+    display: block;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 10fr 1fr;
+        grid-template-columns: 10fr 1fr;
+    color: white;
+    font-family: "Poppins", sans-serif;
+    position: absolute;
+    top: 0px;
+  }
+  .mobile-nav .mobile-logo {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    padding: 20px;
+  }
+  .mobile-nav .mobile-logo img {
+    width: 70px;
+  }
+}
 /*# sourceMappingURL=queries.css.map */
