--- a/Middle Logo/css/queries.css
+++ b/Middle Logo/css/queries.css
@@ -51,21 +51,59 @@
     display: block;
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 10fr 1fr;
-        grid-template-columns: 10fr 1fr;
+    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
     color: white;
     font-family: "Poppins", sans-serif;
     position: absolute;
     top: 0px;
   }
   .mobile-nav .mobile-logo {
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
     padding: 20px;
   }
   .mobile-nav .mobile-logo img {
     width: 70px;
+  }
+  .mobile-nav .sandwich-menu {
+    -ms-grid-column: 6;
+    -ms-grid-column-span: 2;
+    grid-column: 6/8;
+    display: -ms-grid;
+    display: grid;
+  }
+  .mobile-nav .sandwich-menu .sandwich-btn {
+    cursor: pointer;
+    font-size: 30px;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    -ms-grid-column-align: center;
+        justify-self: center;
+  }
+  .mobile-nav .sandwich-menu .sandwich-btn:hover {
+    color: red;
+  }
+  .mobile-nav .sandwich-menu .mobile-drawer-items {
+    display: none;
+    background-color: black;
+  }
+  .mobile-nav .sandwich-menu .mobile-drawer-items a {
+    color: white;
+    text-decoration: none;
+  }
+  .mobile-nav .sandwich-menu .mobile-drawer-items li {
+    text-align: center;
+    border-bottom: 1px solid white;
+    padding: 10px 0;
+    -webkit-transition: width 2s;
+    transition: width 2s;
+    -ms-grid-row: 2;
+    grid-row: 2;
+  }
+  .mobile-nav .sandwich-menu .mobile-drawer-items li:hover {
+    background-color: red;
   }
 }
 /*# sourceMappingURL=queries.css.map */
