--- a/Middle Logo/css/queries.scss
+++ b/Middle Logo/css/queries.scss
@@ -82,24 +82,29 @@
         align-self: center;
         justify-self: center;
         &:hover {
-          color: red;
+          color: #DA4141;
         }
       }
       .mobile-drawer-items {
         display: none;
-        background-color: black;
+        background-color: rgb(82, 82, 82);
+        position: absolute;
+        top: 70px;
+        right: 10px;
+        width: 200px;
         a {
           color: white;
           text-decoration: none;
         }
         li {
           text-align: center;
+          margin: 0 auto;
           border-bottom: 1px solid white;
           padding: 10px 0;
           transition: width 2s;
           grid-row: 2;
           &:hover {
-            background-color: red;
+            background-color: #DA4141;
           }
         }
       }
